# open-desktop

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: lint-api.yaml
requirements/: common.txt  dev.txt
src/open-desktop/: apps.py  docker.py  env.py  environment.py  startup.py
src/open-desktop/providers/: aws.py  azure.py  base.py  gcp.py
