[project]
name = "open-desktop"
description = "An open-source Desktop environment for working with LLM Agents."
version = "0.1.0"
requires-python = ">=3.8"
authors = [
    { name = "John Sutor", email = "johnsutor3@gmail.com"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "SIM"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest]